# cotrader

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.dvc/: config
configs/: infer.yaml  train.yaml  validation.yaml
configs/models/: baseline_mean.yaml  baseline_zero.yaml  default.yaml  linear_v3.yaml  lstm.yaml  transformer.yaml
configs/sections/: features.yaml  indicators.yaml  training.yaml  validation_training.yaml  validation_training_multicpu.yaml
cotrader/: profit_logger.py  train_utils.py  trainer.py  validator.py
cotrader/actions/: infer.py  run_webserver.py  train.py  validate.py
cotrader/datasource/candles/: binance_datasource.py  caching_datasource.py  candle_datasource.py  dummy_datasource.py  indicators_datasource.py  list_datasource.py
cotrader/datasource/tensor/: candle_dataset.py  train_candle_datamodule.py  validation_candle_datamodule.py
cotrader/models/: __init__.py  baseline_zero.py  linear.py  linear_v2.py  linear_v3.py  lstm.py  model.py  transformer.py
cotrader/test/: test_caching_interface.py  test_indicators.py  test_multicandle.py
cotrader/utils/: utils.py
cotrader/web_app/: package.json  rollup.config.js  tsconfig.json
cotrader/web_app/src/: index.ts  style.css
cotrader/webserver/: cost_predictor.py  fixed_sequence_predictor.py  server.py  session.py
models/: 4mparams_2.1mcandles.dvc
plots/validation/baseline_mean/: config.yaml  result.json
plots/validation/baseline_zero/: config.yaml  result.json
plots/validation/transformer-hd64-hl4-sl128-2/: config.yaml  result.json
(+313 files in other folders)
